<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Switch
        android:id="@+id/qCON_Alarm_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/Dialog_qCONAlarm_Switch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <EditText
            android:id="@+id/qCON_Alarm_UpEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="3"
            android:gravity="center"
            android:inputType="number"
            android:lines="1" />

        <CheckBox
            android:id="@+id/qCON_Alarm_UpCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/Dialog_qCONAlarm_Up" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >

        <EditText
            android:id="@+id/qCON_Alarm_DownEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="3"
            android:gravity="center"
            android:inputType="number"
            android:lines="1" />

        <CheckBox
            android:id="@+id/qCON_Alarm_DownCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/Dialog_qCONAlarm_Down" />
    </TableRow>

    <Button
        android:id="@+id/qCON_Alarm_OKButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dialog_Ok" />

</LinearLayout>