<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Start main view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <!-- Start - Content frame -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="88" />
        <!-- End - Content frame -->
        
        <!-- Start - Log text -->
        <EditText
            android:id="@+id/LogText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="#000000"
            android:hint="@string/FileSave_Header_22_Annotations"
            android:ems="10"
            android:inputType="text"
            android:lines="1" />
        <!-- End - Log text -->

        <!-- Start - Status bar -->
        <TableRow
            android:id="@+id/StatusBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="#000000" >

            <TextView
                android:id="@+id/StatusBar_Status_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="#000000"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/StatusBar_Status_lb" />

            <TextView
                android:id="@+id/StatusBar_Status_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="43"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/valor" />

            <View
                android:layout_width="2dip"
                android:background="#FF909090" />

            <TextView
                android:id="@+id/StatusBar_SaveFile_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="13"
                android:background="#000000"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/StatusBar_SaveFile_lb" />

            <TextView
                android:id="@+id/StatusBar_SaveFile_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/valor" />

            <View
                android:layout_width="2dip"
                android:background="#FF909090" />

            <TextView
                android:id="@+id/StatusBar_ElapsedTime_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="16"
                android:background="#000000"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/StatusBar_ElapsedTime_lb" />

            <TextView
                android:id="@+id/StatusBar_ElapsedTime_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="13"
                android:background="#000000"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/valor" />
        </TableRow>
        <!-- End - Status bar -->

    </LinearLayout>
    <!-- End main view -->


    <!-- Start - Navigation List -->
    <ListView
        android:id="@+id/NavigationList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
    <!-- End - Navigation List -->

</android.support.v4.widget.DrawerLayout>